# template-paper-cu12.8.1

./: .gitignore  README.md  env.def  main.sh  make_sif.sh  pyproject.toml  run.sh  setup_venv.sh
scripts/: 00_test.py
